test/files/neg/badtok-1.check
badtok-1.scala:2: error: unexpected quote after symbol
'42'
^
one error found
